--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.7",
+    "autoprefixer": "^10.4.21",
     "inngest": "^3.44.3",
     "mongoose": "^8.19.1",
     "next": "^15.2.3",
@@ -21,8 +22,8 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3"
   }
 }
