--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.33.7",
-    "autoprefixer": "^10.4.21",
-    "inngest": "^3.44.3",
-    "mongoose": "^8.19.1",
-    "next": "^15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.1"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
-    "typescript": "^5.9.3"
-  }
+  "@clerk/nextjs": "^6.33.7",
+  "autoprefixer": "^10.4.21",
+  "inngest": "^3.44.3",
+  "mongoose": "^8.19.1",
+  "next": "^15.2.3",
+  "react": "^19.0.0",
+  "react-dom": "^19.0.0",
+  "react-hot-toast": "^2.5.1",
+  "tailwindcss": "^3.4.18",
+  "postcss": "^8.5.6",
+  "typescript": "^5.9.3"
+},
+"devDependencies": {
+  "@eslint/eslintrc": "^3",
+  "eslint": "^9",
+  "eslint-config-next": "15.1.6"
+}
 }
